--- a/style.css
+++ b/style.css
@@ -119,3 +119,9 @@ button {
     font-size: 24px;
     padding-top: 1rem;
 }
+
+#message {
+    display: flex;
+    justify-content: center;
+    color: red;
+}
