--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ button {
 }
 
 #message {
-    display: flex;
-    justify-content: center;
+    font-size: 12px;
+    font-weight: bold;
     color: red;
 }
